--- a/ReadMe
+++ b/ReadMe
@@ -1,5 +1,5 @@
 
-USEFUL LİNKS
+USEFUL LINKS
 OpenCV, https://docs.opencv.org/master/d6/d00/tutorial_py_root.html
 
 Deep Residual Learning for Image Recognition, https://arxiv.org/abs/1512.03385
